--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -210,6 +210,7 @@
         "fvcore",
         "gbiamby",
         "gcloud",
+        "gelu",
         "geoguessr",
         "geospatial",
         "Gerken",
@@ -255,6 +256,8 @@
         "itertools",
         "itertuples",
         "jaccard",
+        "jobid",
+        "JOBID",
         "jpegoptim",
         "jsons",
         "Jupyter",
@@ -274,7 +277,11 @@
         "Kubernetes",
         "laielli",
         "leaderboard",
+        "llarva",
+        "llava",
         "LMDB",
+        "lmsys",
+        "LOCALID",
         "loeffler",
         "logit",
         "lvis",
@@ -302,20 +309,27 @@
         "nargs",
         "nbconvert",
         "nbextension",
+        "nccl",
+        "NCPUS",
         "ndarray",
         "nepochs",
         "neuropaths",
         "NGPUS",
         "Nitesh",
         "nltk",
+        "NNODES",
         "noqa",
         "norecursedirs",
+        "nproc",
         "nprocs",
         "ntasks",
         "NUMEXPR",
         "numpy",
         "nunique",
+        "nvcc",
+        "nvcr",
         "onnx",
+        "openai",
         "opencv",
         "operationalized",
         "operationalizing",
@@ -364,6 +378,7 @@
         "rarfile",
         "rcfile",
         "rcnn",
+        "rdzv",
         "realpath",
         "Realtek",
         "recents",
@@ -383,10 +398,13 @@
         "rptx",
         "rtype",
         "s",
+        "sacctmgr",
         "savez",
         "SBATCH",
         "scipy",
+        "scontrol",
         "scrollback",
+        "sdist",
         "segm",
         "segmentations",
         "SEGSIZE",
@@ -400,6 +418,7 @@
         "Slurm",
         "Snopes",
         "sqlalchemy",
+        "squeue",
         "srun",
         "submitit",
         "submodule",
@@ -430,6 +449,7 @@
         "tzip",
         "udev",
         "ultralytics",
+        "unbuffered",
         "unchipped",
         "UNFOIL",
         "uniquify",
@@ -485,7 +505,6 @@
         "zprof"
     ],
     "diffEditor.diffAlgorithm": "advanced",
-    "diffEditor.ignoreTrimWhitespace": false,
     "editor.bracketPairColorization.enabled": true,
     "editor.copyWithSyntaxHighlighting": false,
     "editor.cursorBlinking": "smooth",
@@ -665,8 +684,6 @@
     "python.analysis.diagnosticMode": "workspace",
     "python.analysis.indexing": true,
     "python.analysis.typeCheckingMode": "basic",
-    "python.condaPath": "/home/gbiamby/mambaforge/condabin/mamba",
-    "python.defaultInterpreterPath": "/home/gbiamby/mambaforge/envs/rpt/bin/python",
     "python.diagnostics.sourceMapsEnabled": true,
     "python.envFile": "${workspaceFolder}/.env",
     "python.languageServer": "Pylance",
@@ -781,6 +798,7 @@
     "workbench.settings.openDefaultKeybindings": true,
     "workbench.tree.indent": 15,
     "remote.SSH.useFlock": false,
+    "python.experiments.enabled": false,
     "remote.SSH.path": "/usr/local/ossh/bin/ssh",
     "remote.SSH.connectTimeout": 120,
     "remote.SSH.defaultExtensions": [
