--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -181,6 +181,7 @@
         "detectron",
         "Dets",
         "DIDAN",
+        "dinov",
         "direnv",
         "discriminatorzdim",
         "dists",
@@ -190,6 +191,7 @@
         "doctest",
         "doctests",
         "dotenv",
+        "dsvqa",
         "dtype",
         "ebextensions",
         "EBITDA",
@@ -258,6 +260,7 @@
         "jaccard",
         "jobid",
         "JOBID",
+        "jormungandr",
         "jpegoptim",
         "jsons",
         "Jupyter",
@@ -277,6 +280,7 @@
         "Kubernetes",
         "laielli",
         "leaderboard",
+        "liuhaotian",
         "llarva",
         "llava",
         "LMDB",
@@ -336,6 +340,7 @@
         "optim",
         "optipng",
         "orgs",
+        "ossh",
         "owncloud",
         "panopticapi",
         "Parallelization",
@@ -373,6 +378,7 @@
         "PYTHONPATH",
         "PYTHONUNBUFFERED",
         "pytorch",
+        "qformer",
         "querry",
         "randn",
         "rarfile",
@@ -390,6 +396,7 @@
         "repurposing",
         "resnet",
         "RESNETS",
+        "RETVQA",
         "Ritwik",
         "rmtree",
         "Rohrbach",
@@ -407,14 +414,17 @@
         "sdist",
         "segm",
         "segmentations",
+        "segmentator",
         "SEGSIZE",
         "semafor",
         "semaforprogram",
         "serializable",
         "setaf",
+        "setfacl",
         "setuptools",
         "Shilliday",
         "shutil",
+        "slidevqa",
         "Slurm",
         "Snopes",
         "sqlalchemy",
@@ -430,6 +440,7 @@
         "symlink",
         "tenumerate",
         "termcolor",
+        "textvqa",
         "Tilix",
         "timeit",
         "timm",
@@ -480,6 +491,7 @@
         "wandb",
         "webdav",
         "webdavs",
+        "webqa",
         "WLOG",
         "WORKDIR",
         "xclip",
