Probably still some rough points but i tried to make updates here for the things I can remember that gave me errors when I ran on a fresh Ubuntu24.04 install earlier today.

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -806,7 +806,7 @@
         "titleBar.activeBackground": "#1F491D",
         "titleBar.activeForeground": "#F5FBF5"
     },
-    "workbench.colorTheme": "Tomorrow Night Eighties",
+    "workbench.colorTheme": "Tinacious Design",
     "workbench.editor.empty.hint": "hidden",
     "workbench.editor.enablePreview": true,
     "workbench.editor.highlightModifiedTabs": true,
