--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -716,7 +716,9 @@
         "raider.afrl.hpc.mil": "linux",
         "cthulhu5": "linux",
         "jormungandr": "linux",
-        "dgx": "linux"
+        "dgx": "linux",
+        "ydrag": "linux",
+        "brb": "linux"
     },
     "remote.SSH.showLoginTerminal": true,
     "rewrap.wrappingColumn": 88,
