Add step to copy binaries to ~/local/bin

--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -718,7 +718,8 @@
         "jormungandr": "linux",
         "dgx": "linux",
         "ydrag": "linux",
-        "brb": "linux"
+        "brb": "linux",
+        "sif": "linux"
     },
     "remote.SSH.showLoginTerminal": true,
     "rewrap.wrappingColumn": 88,
