--- a/stow_packages/zoom/.config/zoomus.conf
+++ b/stow_packages/zoom/.config/zoomus.conf
@@ -4,14 +4,17 @@
 6K70qDQiygEOC1IRMP7u0d4D3mbTqYIWtc4J5HuRkQs%23=1710737878
 7I9tQaQ3I5oNnMYBHkSeVR5tgKCqwPHjvgkeU5nV7gw%23=1687802816
 CD71g992dMgmLJthor97XdWAp22Tbp4kXUBBfRl2m7Y%23=1708156866
+GUB76TQKB5Vqsy3UjzVpD%2B93ufd8JpJaWthpWxExDGM%23=1754678360
 GeoLocale=system
 Ic3P0hdjUsZKNn7oTCbBcrifSUZtj9t8bUQWat9waa8%23=1698955366
 JNwQMxQUwMWs2E3SUuZs5XDlQysc50EkNf5ggri5JRA%23=1691175602
+KXhiCZ2HpmjrAEVlAVyB4VHAVsfnyTQR06weNL9BKYY%23=1751046574
 N65z0ERhK0hfZOUrpvZbKa20IAIu0Etuq8T%2BuqWl%2Bkw%23=1615984964
 PhoneLiveTrans_Window_Mode_gdhbiicxtjcqctidlhmybw=0
 QFmw49Tp2Lqtyhswu7RnGrEMJ0VJdjm%2By6zXSVlOAAA%23=1610496221
 RYi%2BsBVSXxiPdZ5MsblohfOwSLNaHkctBOA8soD2XIA%23=1668469426
 SensitiveInfoMaskOn=true
+ShowBiDirecSyncNoti=true
 XxEeGL4R0aX3dKmuDP37fj5rmJ356fBiX2gVfwc13bo%23=1697749441
 Y0QF3xwdXDIZFXF2p6J8Rv0klPC1XGH6VHFgT0DgcZE%23=1681340743
 ZxXuSRQFWO9eQkLLVCf6ptu9sWDsJoApoO5DZxUDyow%23=1622737923
@@ -21,18 +24,22 @@ autoScale=false
 bForceMaximizeWM=false
 blockUntrustedSSLCert=false
 captureHDCamera=true
+cefInstanceCountLimit=-1
+cefRefreshTime=0
 chatListPanelLastWidth=230
 com.disable.connection.pk.status=false
 com.zoom.client.langid=0
 conf.webserver=https://zoom.us
 conf.webserver.vendor.default=https://berkeley.zoom.us
-currentMeetingId=
+currentMeetingId=6055814845
 d9kddXBobWD2y7oNwwk1hZD2zbm36rhXGkrfu6PV%2BQA%23=1706569444
 deviceID=B4:2E:99:FB:8C:B4
 disableCef=false
 enable.host.auto.grab=true
 enableAlphaBuffer=false
 enableCefGpu=false
+enableCefLog=false
+enableCefTa=false
 enableCloudSwitch=false
 enableLog=true
 enableMiniWindow=true
@@ -47,6 +54,7 @@ fake.version=
 flashChatTime=0
 forceEnableTrayIcon=true
 forceSSOURL=
+hideCrashReport=false
 host.auto.grab.interval=10
 iMsZ3MknhgApL8HaRPNutVmj4pt2IWYnDGjSwFo9Szs%23=1708156864
 isTransCoding=false
@@ -60,19 +68,26 @@ playSoundForNewMessage=false
 sSi59u1rsUy73A4Z8Wr8xCzeIsasDXsRG2iol5NXqDg%23=1667632591
 scaleFactor=1
 shareBarTopMargin=0
+showOneTimePTAICTipHubble=false
 showOneTimeQAMostUpvoteHubble=true
+showOneTimeQueriesOptionTip=true
 showOneTimeTranslationUpSellTip=false
-speaker_volume=241
+showSystemTitlebar=false
+speaker_volume=255
 sso_domain=.zoom.us
 sso_gov_domain=.zoomgov.com
 supportCefProxyServer=false
 system.audio.type=default
+systemDockMargin=0
 timeFormat12HoursEnable=true
 transcodingUI=true
 translationFreeTrialTipShowTime=0
 upcoming_meeting_header_image=
 useSystemTheme=false
 userEmailAddress=gbiamby@berkeley.edu
+vaqTfB2XdOBuMOLfwg00LqFGx%2B8YGr1PZuJPt2jomPE%23=1739817022
+vyf19eKWxSLbRJNzIUBDD4tLHz01ijUYhl1FBjXJTB4%23=1747940402
+webview.debug.enable=false
 xwayland=true
 
 [1VGa6fEsTQYEquYOdMv]
@@ -106,11 +121,20 @@ Ebk0cYgvJrwhvr5w2OzE7rvCXzWXfZ9gn2E\a0Ws%23=1687802815
 [WV0ROxs3PXQ0uYJ%2BlreDPFVDavgtsGq]
 M%2BmahErufJk%23=1691175601
 
+[XnIT34kGTwpKFX8Of2bv]
+GHXSRToGbzv4bCCwSKNRp8%23=1754678359
+
 [cNCPyFWvOodaOB9]
 Wdgw98RCf8f06THHdrFqj8OVvZ8%23=1705701871
 
 [chat.recent]
 recentlast.session=
+
+[hJlgCRy%2B4hO9zpqRFBX95z5k]
+KS75UaAZUKz\IyVXko%23=1747940400
+
+[hfLBpL11VKEMqXmxs9AVgqR1X9]
+LiNOWxCxJENhYsBQ%23=1744646520
 
 [iqTCwjDoR0hjg2iG]
 Jtj9tvNqIFyQ0IE18%2BMOTeK%2B0A%23=1667632589
@@ -137,6 +161,6 @@ h8pBhyPA7ojM1oIfhp8eE43NI5MPO6c%23=1697222008
 M2bu5r38OIm73%2B8ZzSAmbQ%23=1705701872
 
 [zoom_new_im]
-is_landscape_mode=false
-main_frame_pixel_pos_narrow="376,680"
-main_frame_pixel_pos_wide="810,680"
+is_landscape_mode=true
+main_frame_pixel_pos_narrow="776,919"
+main_frame_pixel_pos_wide="776,919"
