Add health scan script. try to force wayland for zoom.

--- a/stow_packages/zoom/.config/zoomus.conf
+++ b/stow_packages/zoom/.config/zoomus.conf
@@ -31,7 +31,7 @@ com.disable.connection.pk.status=false
 com.zoom.client.langid=0
 conf.webserver=https://zoom.us
 conf.webserver.vendor.default=https://berkeley.zoom.us
-currentMeetingId=6055814845
+currentMeetingId=2377752375
 d9kddXBobWD2y7oNwwk1hZD2zbm36rhXGkrfu6PV%2BQA%23=1706569444
 deviceID=B4:2E:99:FB:8C:B4
 disableCef=false
@@ -47,7 +47,7 @@ enableQmlCache=true
 enableScreenSaveGuard=true
 enableStartMeetingWithRoomSystem=false
 enableTestMode=false
-enableWaylandShare=false
+enableWaylandShare=true
 enableWebviewDevTools=false
 enablegpucomputeutilization=false
 fake.version=
@@ -88,7 +88,7 @@ userEmailAddress=gbiamby@berkeley.edu
 vaqTfB2XdOBuMOLfwg00LqFGx%2B8YGr1PZuJPt2jomPE%23=1739817022
 vyf19eKWxSLbRJNzIUBDD4tLHz01ijUYhl1FBjXJTB4%23=1747940402
 webview.debug.enable=false
-xwayland=true
+xwayland=false
 
 [1VGa6fEsTQYEquYOdMv]
 j1V5NQSTWNQPlSB8TSaIgvM%23=1705893486
