- disable diff-so-fancy - change vscode keybinding ctrl+alt+i to use ruff for organize imports - switch from black to ruff as python formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,4 +24,7 @@
     ],
     "python.testing.unittestEnabled": false,
     "rewrap.wrappingColumn": 100,
+    "editor.formatOnSave": true,
+    "git.repositoryScanMaxDepth": 2,
+    "git-graph.maxDepthOfRepoSearch": 2,
 }
