--- a/stow_packages/vscode/.config/Code/User/settings.json
+++ b/stow_packages/vscode/.config/Code/User/settings.json
@@ -33,7 +33,7 @@
     },
     "[python]": {
         "editor.formatOnType": true,
-        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.defaultFormatter": "charliermarsh.ruff",
         "diffEditor.ignoreTrimWhitespace": false
     },
     "[shellscript]": {
@@ -96,6 +96,46 @@
     ],
     "cSpell.language": "en,en-US",
     "cSpell.userWords": [
+        // --- Python / tooling ---
+        // tell code prettier to not format this list:
+        "argparse","asyncio","dunder","kwargs","args","fstring","fstrings",
+        "dataclass","dataclasses","typehint","typehints","venv","pyproject",
+        "pipx","virtualenv","uvicorn","gunicorn","setuptools","wheel",
+        "pytest","tox","precommit","pre-commit","mypy","pylint","flake8",
+        "black","isort","ruff","pyright","ipynb","nbconvert","pydantic",
+        "fastapi","starlette","sqlalchemy","alembic","uvloop","numpyro",
+
+        // --- Data / viz libs ---
+        "numpy","pandas","scipy","matplotlib","seaborn","plotly","polars",
+        "scikit","scikit-learn","sklearn",
+
+        // --- ML / DL libs ---
+        "pytorch","torchvision","torchaudio","lightning","timm","wandb",
+        "optuna","xgboost","lightgbm","catboost","huggingface","transformers",
+        "tokenizers","datasets","sentencepiece","faiss","spacy","nltk","gensim",
+        "onnx","onnxruntime","mlflow","ray","kubeflow",
+
+        // --- ML concepts / metrics ---
+        "backprop","backpropagation","autograd","autodiff","checkpointing",
+        "dataloader","dataloaders","datamodule","logit","logits","softmax",
+        "argmax","argmin","onehot","one-hot","crossentropy","cross-entropy",
+        "dropout","batchnorm","batchsize","hyperparam","hyperparams",
+        "hyperparameter","hyperparameters","regularization","regularizer",
+        "overfit","overfitting","underfit","underfitting","generalization",
+        "quantization","quantize","distillation","tokenization","tokenizer",
+        "embeddings","perplexity","beamsearch","topk","top-p","nucleus",
+        "AUC","ROC","F1","RMSE","MAE","MSE","BLEU","ROUGE","WER","CER",
+
+        // --- MLOps / infra ---
+        "dockerize","dockerized","kubernetes","k8s","helm","terraform",
+        "airflow","mlpipeline","mlops","autoscaling","prometheus","grafana",
+        "s3","gcs","bigquery","bigtable",
+
+        // --- File formats / misc ---
+        "jsonl","toml","yaml","ndjson","parquet","arrow","protobuf",
+        "README","CLI","API","utils","middleware","enum","kwargs","stdin",
+        "stderr","stdout",
+
         "activelearners",
         "Adelina",
         "algo",
@@ -300,6 +340,7 @@
         "maskrcnn",
         "matplotlib",
         "maxormin",
+        "mccabe",
         "medifor",
         "mers",
         "microservice",
@@ -320,6 +361,7 @@
         "moderna",
         "mrdet",
         "Murt",
+        "mypy",
         "nargs",
         "nbconvert",
         "nbextension",
@@ -375,20 +417,24 @@
         "pyarrow",
         "pycache",
         "pycocotools",
+        "pycodestyle",
         "PYCOM",
         "pycomic",
         "pydocstyle",
         "pydoctest",
         "pyenv",
+        "pyflakes",
         "Pylance",
         "pylint",
         "pylintrc",
         "pypi",
         "pytest",
         "pythonhosted",
+        "Pythonic",
         "PYTHONPATH",
         "PYTHONUNBUFFERED",
         "pytorch",
+        "pyupgrade",
         "qformer",
         "querry",
         "randn",
@@ -514,6 +560,7 @@
         "webdav",
         "webdavs",
         "webqa",
+        "wemake",
         "WLOG",
         "WORKDIR",
         "xclip",
@@ -571,20 +618,59 @@
     },
     "files.autoSave": "afterDelay",
     "files.exclude": {
-        "**/__pycache__/**": true,
-        "**/.DS_Store": true,
+        "**/__pycache__": true,
         "**/.git": true,
+        "**/.svn": true,
+        "**/.idea": true,
+        "**/.DS_Store": true,
+        "**/*.swp": true,
+        "**/*~": true,
         "**/.pytest_cache": true,
+        "**/.ruff_cache": true,
+        "**/.mypy_cache": true,
+        "**/.ipynb_checkpoints": true,
+        "**/*.egg-info": true,
         "**/*.pyc": true,
-        "**/XDG_CACHE_HOME": true
+        "**/.venv": true,
+        "**/venv": true,
+        "**/.tox": true,
     },
     "files.watcherExclude": {
         "**/__pycache__/**": true,
+        "**/.git/**": true,
+        "**/.svn/**": true,
+        "**/.idea/**": true,
         "**/.DS_Store": true,
-        "**/.git": true,
-        "**/.gitbak": true,
         "**/.pytest_cache/**": true,
+        "**/.ruff_cache/**": true,
+        "**/.mypy_cache/**": true,
+        "**/.ipynb_checkpoints/**": true,
         "**/*.pyc": true,
+        "**/node_modules/**": true,
+        "**/bower_components/**": true,
+        "**/build/**": true,
+        "**/_build/**": true,
+        "**/dist/**": true,
+        "**/.eggs/**": true,
+        "**/eggs/**": true,
+        "**/.venv/**": true,
+        "**/venv/**": true,
+        "**/.tox/**": true,
+        "**/.nox/**": true,
+        "**/.direnv/**": true,
+        "**/mambaforge/**": true,
+        "**/.cache/**": true,
+        "**/.hypothesis/**": true,
+        "**/tmp/**": true,
+        // ML Data
+        "data{,/**}": true,
+        "datasets{,/**}": true,
+        "wandb{,/**}": true,
+        "coco{,/**}": true,
+        "**/train2014/**": true,
+        "**/val2014/**": true,
+        "**/train2017/**": true,
+        "**/val2017/**": true,
         "**/coco_vanilla/**": true,
         "**/coco/**/*.txt": true,
         "**/coco/annotations/**": true,
@@ -593,18 +679,24 @@
         "**/data/eval_3.2/**": true,
         "**/data/eval2-samples/**": true,
         "**/data/tests/eval*": true,
-        "**/datasets/**": true,
-        "**/experiments/**": true,
-        "**/mambaforge/**": true,
         "**/messages/messages/**": true,
         "**/mmcv/tests/**": true,
         "**/semafor/datalake/**": true,
         "**/semafor/sandbox/**": true,
-        "**/train2014/**": true,
-        "**/val2014/**": true,
         "**/vanilla/**": true,
+        // ML Artifacts & Logs
+        "**/checkpoints/**": true,
+        "**/experiments/**": true,
+        "**/lightning_logs/**": true,
+        "**/output/**": true,
+        "**/outputs/**": true,
+        "**/results/**": true,
+        "**/save/**": true,
         "**/weights/**": true,
-        "**/work_dirs/**": true
+        "**/work_dirs/**": true,
+        "**/*.ckpt": true,
+        "**/*.pkl": true,
+        "**/*.pt": true
     },
     "git.autofetch": true,
     "git.confirmSync": false,
@@ -740,6 +832,12 @@
     "remote.SSH.showLoginTerminal": true,
     "rewrap.wrappingColumn": 120,
     "security.workspace.trust.untrustedFiles": "open",
+    // --- Search: Exclude artifacts and data from search results ---
+    "search.exclude": {
+        // All entries from files.watcherExclude are automatically excluded from search.
+        // This list only needs to contain patterns NOT in files.watcherExclude.
+        "**/*.code-search": true,
+    },
     "settingsSync.ignoredSettings": [
         "editor.fontFamily"
     ],
@@ -998,6 +1096,15 @@
     "shellformat.flag": "-ci -bn -kp",
     "git.repositoryScanMaxDepth": -1,
     "git-graph.repository.commits.loadMore": 300,
-    "git-graph.maxDepthOfRepoSearch": -1,
+    "git-graph.maxDepthOfRepoSearch": 3,
     "security.workspace.trust.enabled": false,
+    "ruff.organizeImports": false,
+    "evenBetterToml.schema.associations": {
+        // "pyproject.toml": "https://json.schemastore.org/pyproject.json"
+    },
+    "[pip-requirements]": {
+        "editor.defaultFormatter": "mrtz-cdstb00.reqformatter"
+    },
+    "flake8.enabled": false,
+    // "git.path": "/home/gbiamby/bin/git-vscode-wrapper",
 }
