--- a/stow_packages/user_env/.config/environment.d/env.conf
+++ b/stow_packages/user_env/.config/environment.d/env.conf
@@ -1,2 +1,5 @@
 MOZ_ENABLE_WAYLAND=1
 ANKI_WAYLAND=1
+
+# For ydotool (used by gnome extension "another window session manager")
+YDOTOOL_SOCKET=/run/ydotool/.ydotool_socket
